--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
-
+import com.android.build.OutputFile
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -75,9 +75,9 @@ def enableSeparateBuildPerCPUArchitecture = true
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
-    // buildFeatures {
-    //     viewBinding true
-    // }
+    buildFeatures {
+        viewBinding true
+    }
 
     ndkVersion "25.1.8937393"
     buildToolsVersion "34.0.0"
@@ -89,7 +89,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.3"
         missingDimensionStrategy 'react-native-camera', 'general'
         multiDexEnabled true
 
@@ -133,14 +133,14 @@ android {
                     'proguard-rules.pro'
         }
     }
-                  // applicationVariants are e.g. debug, release
+              // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // https://developer.android.com/studio/build/configure-apk-splits.html
             // Example: versionCode 1 will generate 1001 for armeabi-v7a, 1002 for x86, etc.
             def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def abi = output.getFilter(com.android.build.OutputFile.ABI)
+            def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
                         defaultConfig.versionCode * 1000 + versionCodes.get(abi)
@@ -153,16 +153,14 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-    // implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:multidex:2.0.1'
 
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-html-to-pdf')
 
-    implementation platform('com.google.firebase:firebase-bom:33.1.2')
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation(platform("com.google.firebase:firebase-bom:33.2.0"))
+    // implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
     implementation 'com.google.firebase:firebase-messaging'
-    // implementation project(":@react-native-firebase_analytics")
 
       // For animated GIF support
     implementation 'com.facebook.fresco:fresco:3.1.3'
@@ -172,9 +170,14 @@ dependencies {
     implementation 'com.facebook.fresco:animated-webp:2.5.0'
     implementation  'com.facebook.fresco:webpsupport:2.5.0'
     
+    // implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:multidex:2.0.1'
     implementation "com.facebook.react:react-native:+"
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'net.sf.proguard:proguard-annotations:6.2.2'
+//    implementation 'com.google.android.play:core:1.10.3'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:app-update:2.1.0'
     
 
     if (hermesEnabled.toBoolean()) {
