--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,8 +88,8 @@ android {
         applicationId "com.albionbankauctions"
         minSdkVersion 23
         targetSdkVersion 34
-        versionCode 1
-        versionName "1.0.3"
+        versionCode 3
+        versionName "2.0.1"
         missingDimensionStrategy 'react-native-camera', 'general'
         multiDexEnabled true
 
@@ -179,6 +179,7 @@ dependencies {
     implementation 'com.google.android.play:review:2.0.1'
     implementation 'com.google.android.play:app-update:2.1.0'
     
+    implementation project(':react-native-razorpay')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
