--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
