--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "dayjs": "^1.11.13",
+    "expo-file-system": "^18.0.9",
+    "expo-sharing": "^13.0.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-blob-util": "^0.21.2",
     "react-native-btr": "^2.2.1",
     "react-native-calendars": "^1.1306.0",
     "react-native-device-info": "^11.1.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-html-to-pdf": "^0.12.0",
@@ -48,9 +53,11 @@
     "react-native-share": "^10.2.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.5.0",
+    "react-native-ui-datepicker": "^2.0.11",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.5",
     "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
