--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "expo-file-system": "^18.0.9",
     "expo-sharing": "^13.0.1",
@@ -45,6 +46,7 @@
     "react-native-otp-verify": "^1.1.8",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.15.0",
