--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-global-font": "^1.0.3",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
@@ -58,6 +59,7 @@
     "react-native-ui-datepicker": "^2.0.11",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.5",
+    "react-native-zip-archive": "^7.0.1",
     "react-redux": "^9.1.2",
     "redux-thunk": "^3.1.0",
     "rn-fetch-blob": "^0.12.0"
